force-app/main/default/objects/Company_Agency_Match__c/Company_Agency_Match__c.object-meta.xml
<CustomObject>
    <description>Pair up a company with an Agency Project (Site Visit) and use this pairing to add any further required info to generate the HOC objects &quot;Volunteer Opportunity&quot; and one &quot;Occurrence&quot;.  This can be saved as a draft until a &quot;Generate on Save&quot; checkbox is checked.  The checkbox will generate a Volunteer Opportunity unless if finds one already for this combination.  To regenerate delete the existing one.</description>
    <label>Company Agency Match</label>
    <nameField>
        <displayFormat>match{0000}</displayFormat>
        <label>Company Agency Match Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company Agency Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>