force-app/main/default/objects/Company_Agency_Match__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>You should assign this field a value before selecting a Project-Site-Visit if you got here from the Company-Intake.  If you got here from the Project-Site-Visit then this value will be provided when you click &quot;Save&quot;.</inlineHelpText>
    <label>Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Nonprofit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Company Agency Matches (Agency)</relationshipLabel>
    <relationshipName>Company_Agency_Matches1</relationshipName>
    <type>Lookup</type>
</CustomField>