force-app/main/default/objects/Company_Agency_Match__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>You should assign this field a value before selecting a Company-Intake if you got here from the Project-Site-Visit. If you got here from the Company-Intake then this value will be provided when you click &quot;Save&quot;.</inlineHelpText>
    <label>Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Company Agency Matches</relationshipLabel>
    <relationshipName>Company_Agency_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>