force-app/main/default/objects/Company_Agency_Match__c/fields/Company_Intake__c.field-meta.xml
<CustomField>
    <fullName>Company_Intake__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Company Intake</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Company_Intake__c.Company__c</field>
            <operation>equals</operation>
            <valueField>$Source.Company__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Company_Intake__c</referenceTo>
    <relationshipLabel>Company Agency Matches</relationshipLabel>
    <relationshipName>Company_Agency_Matches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>