force-app/main/default/objects/Company_Agency_Match__c/fields/Company_Max_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Company_Max_Volunteers__c</fullName>
    <formula>Company_Intake__r.Number_of_Volunteers_maximum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Max Volunteers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>