force-app/main/default/objects/Company_Agency_Match__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>If none provided Volunteer Opportunity will use the Project End Date from the Project Site Visit.  If that is not provided then this defaults to the start date for a one-day project.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>