force-app/main/default/objects/Company_Agency_Match__c/fields/First_Occurrence_End__c.field-meta.xml
<CustomField>
    <fullName>First_Occurrence_End__c</fullName>
    <label>First Occurrence End</label>
    <type>DateTime</type>
</CustomField>