force-app/main/default/objects/Company_Agency_Match__c/fields/First_Occurrence_Start__c.field-meta.xml
<CustomField>
    <fullName>First_Occurrence_Start__c</fullName>
    <inlineHelpText>If not provided First Occurrence will use Project Date with Project Start Time.</inlineHelpText>
    <label>First Occurrence Start</label>
    <type>DateTime</type>
</CustomField>