force-app/main/default/objects/Company_Agency_Match__c/fields/Generate_on_Save__c.field-meta.xml
<CustomField>
    <fullName>Generate_on_Save__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box after all data is entered for the Volunteer Opportunity.  If you want to re-generate the Volunteer Opportunity from changed data then delete the existing Volunteer Opportunity first.</inlineHelpText>
    <label>Generate on Save</label>
    <type>Checkbox</type>
</CustomField>