force-app/main/default/objects/Company_Agency_Match__c/fields/Min_Volunteer_Age_w_adult__c.field-meta.xml
<CustomField>
    <fullName>Min_Volunteer_Age_w_adult__c</fullName>
    <formula>Project_Site_Visit__r.Min_Volunteer_Age_w_adult__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Volunteer Age (w/adult)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>