force-app/main/default/objects/Company_Agency_Match__c/fields/Minimum_Volunteer_Age__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Volunteer_Age__c</fullName>
    <formula>Project_Site_Visit__r.Minimum_Volunteer_Age__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minimum Volunteer Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>