force-app/main/default/objects/Company_Agency_Match__c/fields/Minimum_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Volunteers__c</fullName>
    <inlineHelpText>If not provided Volunteer Opportunity defaults to Project Max Min Volunteers.</inlineHelpText>
    <label>Minimum Volunteers</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>