force-app/main/default/objects/Company_Agency_Match__c/fields/Opportunity_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only required to override the default which is you - the current user.</inlineHelpText>
    <label>Opportunity Coordinator</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.HOC__Username__c</field>
            <operation>notEqual</operation>
            <value/>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Company Agency Matches</relationshipLabel>
    <relationshipName>Company_Agency_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>