force-app/main/default/objects/Company_Agency_Match__c/fields/Opportunity_Coordinator_Default__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Coordinator_Default__c</fullName>
    <formula>$User.FirstName &amp; &apos; &apos; &amp; $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Coordinator Default</label>
    <type>Text</type>
</CustomField>