force-app/main/default/objects/Company_Agency_Match__c/fields/Project_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Date__c</fullName>
    <formula>Project_Site_Visit__r.Project_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Date</label>
    <type>Date</type>
</CustomField>