force-app/main/default/objects/Company_Agency_Match__c/fields/Project_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Project_End_Time__c</fullName>
    <formula>text(Project_Site_Visit__r.End_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If not provided First Occurrence will use Project End Date with Project End Time.</inlineHelpText>
    <label>Project End Time</label>
    <type>Text</type>
</CustomField>