force-app/main/default/objects/Company_Agency_Match__c/fields/Project_Location__c.field-meta.xml
<CustomField>
    <fullName>Project_Location__c</fullName>
    <formula>Project_Site_Visit__r.Project_Location__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Location</label>
    <type>Text</type>
</CustomField>