force-app/main/default/objects/Company_Agency_Match__c/fields/Project_Max_Max_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Project_Max_Max_Volunteers__c</fullName>
    <formula>Project_Site_Visit__r.Max_Max_Volunteers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Max Max Volunteers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>