force-app/main/default/objects/Company_Agency_Match__c/fields/Project_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_Visit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>This is the project to which this match is connected.</inlineHelpText>
    <label>Project Site Visit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Site_Visit__c.Nonprofit_Agency__c</field>
            <operation>equals</operation>
            <valueField>$Source.Agency__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Project_Site_Visit__c</referenceTo>
    <relationshipLabel>Company Agency Matches</relationshipLabel>
    <relationshipName>Company_Agency_Matches</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>