force-app/main/default/objects/Company_Agency_Match__c/fields/Project_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Project_Start_Time__c</fullName>
    <formula>text(Project_Site_Visit__r.Start_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Start Time</label>
    <type>Text</type>
</CustomField>