force-app/main/default/objects/Company_Agency_Match__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>If none provided Volunteer Opportunity will use the Project Date from the Project Site Visit.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>