force-app/main/default/objects/Company_Agency_Match__c/fields/Volunteer_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>connects us to the opportunity we generated</inlineHelpText>
    <label>Volunteer Opportunity</label>
    <referenceTo>HOC__Volunteer_Opportunity__c</referenceTo>
    <relationshipLabel>Company Agency Matches</relationshipLabel>
    <relationshipName>Company_Agency_Matches</relationshipName>
    <type>Lookup</type>
</CustomField>